--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "vite": "^4.3.0",
     "vite-plugin-tailwind-purgecss": "^0.1.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "highlight.js": "^11.9.0"
+  }
 }
