--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@auth/core": "^0.18.0",
+    "@auth/sveltekit": "^0.3.11",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "dotenv": "^16.3.1",
     "highlight.js": "^11.9.0"
   }
 }
